k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockops
  namespace: mockops
  labels:
    app.kubernetes.io/name: mockops
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mockops
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mockops
    spec:
      containers:
        - name: mockops
          image: ghcr.io/ahimsarijalu/mockops:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
