k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockops
  namespace: mockops
  labels:
    app.kubernetes.io/name: mockops
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mockops
  ports:
    - name: http
      port: 80
      targetPort: http
