k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mockops
  namespace: mockops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: mockops.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mockops
                port:
                  name: http
  tls:
    - hosts:
        - mockops.example.com
      secretName: mockops-tls
